# template_cpp_project

./: README.md  install
build_release/: CMakeLists.txt
doc/: CMakeLists.txt  compile_doc  custom.css  doxyfile.in  footer.html  header.html.in  mainpage.hpp
exe/: CMakeLists.txt  main.cpp
include/: abc.hpp  xyz.hpp
src/: abc.cpp  xyz.cpp
